# syphon-rs

./: .gitignore  CHANGELOG.md  CHANGES.md  Cargo.toml  LICENSE-MIT  OBJC2_MIGRATION.md  README.md  TROUBLESHOOTING.md  ZERO_COPY_IMPLEMENTATION.md
syphon-core/: Cargo.toml  README.md  build.rs
syphon-core/examples/: core_client.rs  input_test.rs
syphon-core/frameworks/Versions/A/: Syphon
syphon-core/frameworks/Versions/A/Resources/: Info.plist
syphon-core/frameworks/Versions/A/_CodeSignature/: CodeResources
syphon-core/src/: client.rs  directory.rs  iosurface_ext.rs  lib.rs  server.rs  utils.rs
syphon-examples/: Cargo.toml
syphon-examples/examples/: metal_client.rs  verify_loopback.rs
syphon-metal/: Cargo.toml  README.md
syphon-metal/src/: lib.rs
syphon-wgpu/: Cargo.toml  README.md
syphon-wgpu/src/: input.rs  lib.rs  metal_interop.rs
