[workspace]
members = [
    "syphon-core",
    "syphon-metal",
    "syphon-wgpu",
    "syphon-examples",
]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["BlueJayLouche <bluejaylouche@gmail.com>"]
license = "MIT"
repository = "https://github.com/BlueJayLouche/syphon-rs"

[workspace.lints.rust]
# The `objc 0.2` `msg_send!` macro expands to `#[cfg(feature = "cargo-clippy")]`,
# which newer rustc flags under check-cfg. Declare it as an expected value.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }
# The FFI layer is built on `io_surface`/`cocoa`, which are deprecated in favor
# of the `objc2-*` crates. Migrating is tracked separately; suppress the noise
# until then rather than churn the working interop.
deprecated = "allow"
