[workspace]
members = [
    "syphon-core",
    "syphon-metal",
    "syphon-wgpu",
    "syphon-examples",
]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["BlueJayLouche <bluejaylouche@gmail.com>"]
license = "MIT"
repository = "https://github.com/BlueJayLouche/syphon-rs"

[workspace.lints.rust]
# syphon-core's internals still use `objc 0.2`, whose `msg_send!` macro expands
# to `#[cfg(feature = "cargo-clippy")]` — newer rustc flags it under check-cfg.
# Declare it as an expected value. (See OBJC2_MIGRATION.md for the remaining work.)
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }
# syphon-core's FFI internals use `io_surface`/`cocoa`, deprecated in favor of
# the `objc2-*` crates. Suppress until those internals are migrated.
deprecated = "allow"
