[package]
name = "syphon-core"
version = "0.1.1"
edition = "2021"
authors = ["BlueJayLouche <bluejaylouche@gmail.com>"]
description = "Core Objective-C bindings for Syphon on macOS"
license = "MIT"
readme = "README.md"
repository = "https://github.com/BlueJayLouche/syphon-rs"
keywords = ["syphon", "macos", "video", "gpu", "texture-sharing"]
categories = ["os::macos-apis", "graphics", "multimedia::video"]

[dependencies]
log = "0.4"
thiserror = "2.0"

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
objc_id = "0.1"
objc-foundation = "0.1"
core-foundation = "0.10"
core-graphics = "0.25"
io-surface = "0.16"
cocoa = "0.26"
block = "0.1"
libc = "0.2"

[dev-dependencies]
env_logger = "0.11"
crossbeam = "0.8"

[features]
default = []
# Enable detailed logging (disabled by default for performance)
logging = ["log/release_max_level_warn"]
# Maximum performance - disables all logging in release builds
max_perf = ["log/release_max_level_off"]
