[package]
name = "syphon-core"
version = "0.2.1"
edition = "2024"
links = "Syphon"
authors = ["BlueJayLouche <bluejaylouche@gmail.com>"]
description = "Core Objective-C bindings for Syphon on macOS"
license = "MIT"
readme = "README.md"
repository = "https://github.com/BlueJayLouche/syphon-rs"
keywords = ["syphon", "macos", "video", "gpu", "texture-sharing"]
categories = ["os::macos-apis", "graphics", "multimedia::video"]
include = [
    "src/**/*",
    "examples/**/*",
    "frameworks/Versions/A/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-Syphon",
]

[lints]
workspace = true

[dependencies]
log = "0.4"
thiserror = "2.0"

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
# Public API boundary types (AnyObject / IOSurfaceRef) — internals still use objc 0.2.
objc2 = "0.6"
objc2-io-surface = "0.3"
objc = "0.2"
objc_id = "0.1"
objc-foundation = "0.1"
core-foundation = "0.10"
core-graphics = "0.25"
io-surface = "0.16"
cocoa = "0.26"
block = "0.1"
libc = "0.2"

[dev-dependencies]
env_logger = "0.11"
crossbeam = "0.8"

[features]
default = []
# Enable detailed logging (disabled by default for performance)
logging = ["log/release_max_level_warn"]
# Maximum performance - disables all logging in release builds
max_perf = ["log/release_max_level_off"]
