[package]
name = "syphon-metal"
version = "0.1.1"
edition = "2021"
authors = ["BlueJayLouche <bluejaylouche@gmail.com>"]
description = "Metal and IOSurface utilities for Syphon"
license = "MIT"
readme = "README.md"
repository = "https://github.com/BlueJayLouche/syphon-rs"
keywords = ["syphon", "macos", "metal", "iosurface", "gpu"]
categories = ["os::macos-apis", "graphics", "multimedia::video"]

[lints]
workspace = true

[dependencies]
syphon-core = { path = "../syphon-core", version = "0.1.2" }
log = "0.4"

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.33"
core-foundation = "0.10"
core-graphics = "0.25"
io-surface = "0.16"
cocoa = "0.26"
objc = "0.2"
foreign-types-shared = "0.3"

# Optional wgpu interop
wgpu = { version = "29.0", optional = true }
wgpu-hal = { version = "29.0", optional = true }

[features]
default = []
wgpu = ["dep:wgpu", "dep:wgpu-hal"]
