[package]
name = "syphon-metal"
version = "0.3.0"
edition = "2024"
authors = ["BlueJayLouche <bluejaylouche@gmail.com>"]
description = "Metal and IOSurface utilities for Syphon"
license = "MIT"
readme = "README.md"
repository = "https://github.com/BlueJayLouche/syphon-rs"
keywords = ["syphon", "macos", "metal", "iosurface", "gpu"]
categories = ["os::macos-apis", "graphics", "multimedia::video"]

[lints]
workspace = true

[dependencies]
syphon-core = { path = "../syphon-core", version = "0.3.0" }
log = "0.4"

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-metal = { version = "0.3", features = ["objc2-io-surface"] }
objc2-io-surface = "0.3"
objc2-core-foundation = "0.3"

# Optional wgpu interop
wgpu = { version = "29.0", optional = true }
wgpu-hal = { version = "29.0", optional = true }

[features]
default = []
wgpu = ["dep:wgpu", "dep:wgpu-hal"]
