[package]
name = "syphon-wgpu"
version = "0.1.2"
edition = "2021"
authors = ["BlueJayLouche <bluejaylouche@gmail.com>"]
description = "High-level wgpu integration for Syphon"
license = "MIT"
readme = "README.md"
repository = "https://github.com/BlueJayLouche/syphon-rs"
keywords = ["syphon", "macos", "wgpu", "gpu", "texture-sharing"]
categories = ["os::macos-apis", "graphics", "multimedia::video", "rendering::engine"]

[lints]
workspace = true

[dependencies]
syphon-core = { path = "../syphon-core", version = "0.1.2" }
syphon-metal = { path = "../syphon-metal", features = ["wgpu"], version = "0.1.2" }
wgpu = "29.0"
wgpu-hal = "29.0"
log = "0.4"
bytemuck = "1.16"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.33"
objc = "0.2"
io-surface = "0.16"
core-foundation = "0.10"
cocoa = "0.26"
pollster = "0.4"

[dev-dependencies]
env_logger = "0.11"
pollster = "0.4"

[features]
default = []
# Enable detailed logging (disabled by default for performance)
logging = ["log/release_max_level_warn", "syphon-core/logging"]
# Maximum performance - disables all logging in release builds
max_perf = ["log/release_max_level_off", "syphon-core/max_perf"]
