[package]
name = "syphon-wgpu"
version = "0.3.0"
edition = "2024"
authors = ["BlueJayLouche <bluejaylouche@gmail.com>"]
description = "High-level wgpu integration for Syphon"
license = "MIT"
readme = "README.md"
repository = "https://github.com/BlueJayLouche/syphon-rs"
keywords = ["syphon", "macos", "wgpu", "gpu", "texture-sharing"]
categories = ["os::macos-apis", "graphics", "multimedia::video", "rendering::engine"]

[lints]
workspace = true

[dependencies]
syphon-core = { path = "../syphon-core", version = "0.3.0" }
syphon-metal = { path = "../syphon-metal", features = ["wgpu"], version = "0.3.0" }
wgpu = "29.0"
wgpu-hal = "29.0"
log = "0.4"
bytemuck = "1.16"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-metal = "0.3"

[dev-dependencies]
env_logger = "0.11"
pollster = "0.4"

[features]
default = []
# Enable detailed logging (disabled by default for performance)
logging = ["log/release_max_level_warn", "syphon-core/logging"]
# Maximum performance - disables all logging in release builds
max_perf = ["log/release_max_level_off", "syphon-core/max_perf"]
